# SkiaAppPES

./: BUILD.gn
apps/0010_HelloWorldApp/HelloWorldLib/: AppLib.h  BUILD.gn
apps/0015_LottieTestApp/LottieTestLib/: AppLib.cpp  AppLib.h  BUILD.gn
apps/0080_ViewerApp/TemplateLib/: AppLib.cpp  AppLib.h  BUILD.gn
apps/SDL_gui/: BUILD.gn
apps/SDL_gui/libs/SQLiteCpp/include/SQLiteCpp/: Database.h
apps/SDL_gui/libs/SQLiteCpp/src/: Backup.cpp  Database.cpp  Statement.cpp
apps/SDL_gui/libs/csvstream/: csvstream.cpp  csvstream.h
apps/SDL_gui/libs/minizip/: miniunz.c
apps/SDL_gui/libs/ofxClipper/clipper/src/cpp/: clipper.cpp  clipper.hpp
apps/SDL_gui/libs/openssl/include/openssl/: opensslconf_android.h  opensslconf_ios.h  opensslconf_tvos.h
apps/SDL_gui/libs/openssl/lib/vs/Win32/: ssleay32md.lib
apps/SDL_gui/libs/openssl/lib/vs/x64/: ssleay32md.lib
apps/SDL_gui/libs/potrace/include/: config.h
apps/SDL_gui/libs/potrace/lib/emscripten/: potrace
apps/SDL_gui/libs/potrace/project/android/: Application.mk  jni_build.cmd  jni_build.sh
apps/SDL_gui/libs/potrace/project/ios/potrace.xcodeproj/: project.pbxproj
apps/SDL_gui/libs/potrace/project/ios/src/: auxiliary.h  backend_dxf.c  backend_eps.c  backend_geojson.c  backend_pdf.c  backend_pgm.c  backend_svg.c  backend_xfig.c  bbox.c  bitmap_io.c  bitops.h  curve.c  decompose.c  flate.c  greymap.c  lzw.c  main.c  main.h  potracelib.c  progress_bar.c  render.c  trace.c  trans.c
apps/SDL_gui/libs/potrace/project/osx/potrace.xcodeproj/: project.pbxproj
apps/SDL_gui/libs/potrace/project/osx/src/: Makefile  backend_dxf.c  backend_eps.c  backend_pgm.c  potracelib.c
apps/SDL_gui/libs/potrace/project/vs/: potrace.sln  potrace.vcxproj  potrace.vcxproj.filters
apps/SDL_gui/libs/potrace/src/: Android.mk  backend_geojson.h  main.c
apps/SDL_gui/libs/pugixml/: pugixml.cpp
apps/SDL_gui/libs/sdl_gfx/: SDL2_gfxPrimitives.c
apps/SDL_gui/libs/sdl_image/: IMG_png.c  IMG_svg.c  nanosvg.h  nanosvgrast.h
apps/SDL_gui/libs/sdl_net/: aclocal.m4
apps/SDL_gui/libs/sdl_ttf/: SDL_ttf.cpp  SDL_ttf.h
apps/SDL_gui/libs/tess2/Source/: bucketalloc.c  mesh.c
apps/SDL_gui/libs/utf8cpp/include/utf8/: checked.h  core.h  unchecked.h
apps/SDL_gui/src/: FontAwesome.h  GUI_BalloonDialog.cpp  GUI_BalloonDialog.h  GUI_Button.cpp  GUI_Button.h  GUI_ButtonFontAwesome.cpp  GUI_ButtonFontAwesome.hpp  GUI_Color.h  GUI_ColorPicker.cpp  GUI_ColorPicker.hpp  GUI_Dialog.cpp  GUI_Dialog.hpp  GUI_Downloader.cpp  GUI_Downloader.h  GUI_Dropdown.cpp  GUI_Dropdown.h  GUI_EditText.cpp  GUI_EditText.h  GUI_FileDialog.cpp  GUI_FileDialog.h  GUI_FontAtlas.cpp  GUI_FontAtlas.hpp  GUI_Image.cpp  GUI_Image.h  GUI_Label.cpp  GUI_Label.h  GUI_List.cpp  GUI_List.h  GUI_Log.cpp  GUI_Log.h  GUI_MQTT.cpp  GUI_Math.cpp  GUI_Math.h  GUI_Network.cpp  GUI_Network.h  GUI_Path.inl  GUI_Popup.cpp  GUI_Popup.h  GUI_Preference.cpp  GUI_Preference.h  (+42 more)
apps/SDL_gui/src/ext/: guiButton.cpp  guiButton.hpp  guiDigit.cpp  guiDigit.hpp  guiEvents.cpp  guiEvents.h  guiExt.h  guiFolder.cpp  guiFolder.hpp  guiGroup.cpp  guiGroup.hpp  guiScrollBar.cpp  guiScrollBar.hpp  guiSwitch.cpp  guiSwitch.hpp  guiTheme.h  guiToolTips.cpp  guiToolTips.hpp
apps/mqtt_c/: BUILD.gn
apps/mqtt_c/templates/: posix_sockets.h
apps/sk_ui/: BUILD.gn  FPSLayer.cpp  FPSLayer.h  MouseTest.cpp  MouseTest.h  SkiaApp.cpp  SkiaApp.h  SkiaAppLayer.cpp  SkiaAppLayer.h  StatsLayer.cpp  StatsLayer.h  TemplateLayer.cpp  TemplateLayer.h  sk_ui.h
apps/sk_ui/_MacOS/sk_ui/: sk_ui.cpp  sk_ui.hpp  sk_uiPriv.hpp
apps/sk_ui/_MacOS/sk_ui.xcodeproj/: project.pbxproj
apps/sk_ui/_VisualStudio/: .gitignore  sk_ui.cpp  sk_ui.vcxproj  sk_ui.vcxproj.filters
apps/sk_ui/_iOS/sk_ui.xcodeproj/: project.pbxproj
apps/sk_ui/_sdl_app/: main.cpp
apps/sk_ui/_sk_app/: App.cpp  App.h
apps2/0010_LayersTestApp/LayersTestLib/: AppLib.cpp  AppLib.h  BUILD.gn
apps2/1010_MagicPatternApp/MagicPatternLib/: AppLib.h  BUILD.gn
apps2/1020_SVGEditorApp/SVGEditorLib/: AppLib.h  BUILD.gn
apps2/1021_SVGEditorApp2/SVGEditorLib/: BUILD.gn
apps2/1030_PESTestApp/PESTestLib/: AppLib.cpp  AppLib.h  BUILD.gn
apps2/1052_MagicPatternPatternGrader/MPPatternGrader/: BUILD.gn
apps2/1060_BWS/BWSLib/: AppLib.cpp  AppLib.h  BUILD.gn
apps2/1080_PES5Template/PESTemplateLib/: AppLib.cpp  AppLib.h  BUILD.gn
apps3/3000_UComposerApp/UComposerLib/: AppLib.cpp  AppLib.h  BUILD.gn
components/libqrencode/: BUILD.gn
modules/pes/: pes.gni
modules/pes/include/: UnicodeHelper.h  checked.h  clipper.hpp  pesClipper.hpp  pesColor.hpp  pesCubicSuperPath.hpp  pesData.hpp  pesEMBClassify.hpp  pesEMBFill.hpp  pesEncoder.hpp  pesMath.hpp  pesPath.hpp  pesPolyline.hpp  pesSVG.hpp  pesSVGTypes.h  pesSatinColumn.hpp  pesSatinOutline.hpp  pesStitchBlock.hpp  unchecked.h
modules/pes/pesEngine.xcodeproj/project.xcworkspace/xcuserdata/jimmy.xcuserdatad/: UserInterfaceState.xcuserstate
modules/pes/pesEngine.xcodeproj/project.xcworkspace/xcuserdata/pom.xcuserdatad/: UserInterfaceState.xcuserstate
modules/pes/pesEngine.xcodeproj/xcuserdata/Jim.xcuserdatad/xcschemes/: xcschememanagement.plist
modules/pes/pesEngine.xcodeproj/xcuserdata/pom.xcuserdatad/xcschemes/: xcschememanagement.plist
modules/pes/src/: pesBuffer.cpp  pesClipper.cpp  pesColor.cpp  pesCubicSuperPath.cpp  pesMath.cpp  pesPath.cpp  pesPathUtility.cpp  pesRectangle.cpp  pesSVG.cpp  pesSatinColumn.cpp  pesSkPath.cpp  pesStitchBlock.cpp  pesUtility.cpp  pugixml.cpp
pes/: BUILD.gn
pes/include/: pesAutoBranch.hpp  pesBuffer.hpp  pesDocument.hpp  pesEffect.hpp  pesEngine.h  pesGcode.hpp  pesPathUtility.hpp  pesRectangle.hpp  pesSkPath.hpp  pesUtility.hpp  pesVec2f.hpp  pesVec3f.h  pugixml.hpp
pes/pesEngine.xcodeproj/: project.pbxproj
pes/pesEngine.xcodeproj/project.xcworkspace/xcuserdata/Jim.xcuserdatad/: UserInterfaceState.xcuserstate
pes/pesEngineTest/: main.cpp
pes/src/: UnicodeHelper.cpp  clipper.cpp  pesAutoBranch.cpp  pesData.cpp  pesDocument.cpp  pesEMBClassify.cpp  pesEMBFill.cpp  pesEffect.cpp  pesEncoder.cpp  pesGcode.cpp  pesPolyline.cpp  pesSatinOutline.cpp  pesVec2f.cpp
(+1216 files in other folders)
