# Copyright 2019 Google LLC
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Things are easiest for everyone if these source paths are absolute.
_src = get_path_info("src", "abspath")
_include = get_path_info("include", "abspath")

skia_pes_sources = [
  "$_src/clipper.cpp",
  "$_src/pugixml.cpp",
  "$_src/pesVec2f.cpp",
  "$_src/pesRectangle.cpp",
  "$_src/pesColor.cpp",
  "$_src/pesPolyline.cpp",
  "$_src/pesPath.cpp",
  "$_src/pesSkPath.cpp",
  "$_src/pesPathUtility.cpp",
  "$_src/pesMath.cpp",
  "$_src/pesClipper.cpp",
  "$_src/pesAutoBranch.cpp",
  "$_src/pesCubicSuperPath.cpp",
  "$_src/pesEffect.cpp",
  "$_src/pesUtility.cpp",
  "$_src/pesBuffer.cpp",
  "$_src/pesSatinOutline.cpp",
  "$_src/pesSatinColumn.cpp",
  "$_src/pesEMBFill.cpp",
  "$_src/pesStitchBlock.cpp",
  "$_src/pesData.cpp",
  "$_src/pesDocument.cpp",
  "$_src/pesSVG.cpp",
  "$_src/pesEncoder.cpp",
  "$_src/pesGcode.cpp",
  "$_src/UnicodeHelper.cpp",
  "$_src/pesEMBClassify.cpp",
  "$_include/clipper.hpp",
  "$_include/pugixml.hpp",
  "$_include/pesVec2f.hpp",
  "$_include/pesRectangle.hpp",
  "$_include/pesColor.hpp",
  "$_include/pesPolyline.hpp",
  "$_include/pesPath.hpp",
  "$_include/pesSkPath.hpp",
  "$_include/pesPathUtility.hpp",
  "$_include/pesMath.hpp",
  "$_include/pesClipper.hpp",
  "$_include/pesAutoBranch.hpp",
  "$_include/pesCubicSuperPath.hpp",
  "$_include/pesEffect.hpp",
  "$_include/pesUtility.hpp",
  "$_include/pesBuffer.hpp",
  "$_include/pesSatinOutline.hpp",
  "$_include/pesSatinColumn.hpp",
  "$_include/pesEMBFill.hpp",
  "$_include/pesStitchBlock.hpp",
  "$_include/pesData.hpp",
  "$_include/pesDocument.hpp",
  "$_include/pesSVG.hpp",
  "$_include/pesEncoder.hpp",
  "$_include/pesGcode.hpp",
  "$_include/UnicodeHelper.h",
  "$_include/pesEMBClassify.hpp",
]
