# Copyright 2019 Google LLC
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  skia_enable_lottietest_lib = true
}

import("../../../gn/skia.gni")

config("public_config") {
  if (skia_enable_lottietest_lib) {
    include_dirs = [ 
      "./",
      "//apps/happyhttp",
      "//apps2/DecUI",
    ]
  }
}

static_library("LottieTestLib") {
  if (skia_enable_lottietest_lib) {
    public_configs = [ ":public_config" ]
    include_dirs = [ 
      "./",
      "../../../third_party/externals/imgui",
      "../../sk_ui",
    ]
    if (is_win) {
      cflags = [ "-DWIN32" ]
      libs = [ 
        "setupapi.lib",
        "advapi32.lib",
        "ws2_32.lib",
        "mswsock.lib",
      ]       
    }
    deps = [
      "../../..:skia",
      "//apps/sk_ui",
    ]
    sources = [
      "AppLib.cpp",
      "//apps/0015_LottieTestApp/src/AppCreator.cpp",
      "//apps/0015_LottieTestApp/src/LottieTestLayer.cpp",
    ]
    configs += [ "../../../:skia_private" ]
    if (skia_enable_tools) {
      configs += [ "../../../:our_vulkan_headers" ]
    }
  }
}
