# Copyright 2019 Google LLC
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  skia_enable_magicpatternlib = true
}

import("../../../gn/skia.gni")

config("public_config") {
  if (skia_enable_magicpatternlib) {
    include_dirs = [
      "./",
      "../src",
    ]
  }
}

static_library("MagicPatternLib") {
  if (skia_enable_magicpatternlib) {
    public_configs = [ ":public_config" ]
    include_dirs = [
      "//apps/happyhttp",
      "//third_party/externals/imgui",
      "//apps2/DecUI",
    ]
    if (is_win) {
      cflags = [ "-DWIN32" ]
      libs = [
        "setupapi.lib",
        "advapi32.lib",
        "ws2_32.lib",
        "mswsock.lib",
      ]
    }
    deps = [
      "../../..:skia",
      "//third_party/imgui",
      "//apps/sk_ui",
    ]
    sources = [
      "AppLib.h",
      "AppLib.cpp",
      "../src/AppCreator.cpp",
      "../src/MagicPatternLayer.cpp",
      "../src/TestMagicPattern.cpp",
      "../src/DecMagicPattern.cpp",
      "../src/DecMPPanel.cpp"
    ]
    configs += [ "../../../:skia_private" ]
    if (skia_enable_tools) {
      configs += [ "../../../:our_vulkan_headers" ]
    }
  }
}
