# Copyright 2019 Google LLC
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  skia_enable_pestestlib = true
}

import("../../../gn/skia.gni")

config("public_config") {
  if (skia_enable_pestestlib) {
    include_dirs = [
      "./",
      "../src",
    ]
  }
}

static_library("PESTestLib") {
  if (skia_enable_pestestlib) {
    public_configs = [ ":public_config" ]
    include_dirs = [
      "//apps/happyhttp",
      "//third_party/externals/imgui",
      "//apps2/DecUI",
      "//modules/pes/include",
    ]

    deps = [
      "../../..:skia",
      "//third_party/imgui",
      "//apps/sk_ui",
      "//modules/pes",     
    ]
    sources = [
      "AppLib.h",
      "AppLib.cpp",
      "../src/AppCreator.cpp",
      "../src/PESTestLayer.h",
      "../src/PESTestLayer.cpp",
      "../src/PesSystemUtils.hpp",
    ]

    if (is_mac) {
      sources += [
        "../src/PesSystemUtils.mm",
      ]
    }
    else {
      sources += [
        "../src/PesSystemUtils.cpp",
      ]
    }

    if (is_win) {
      libs = [
        "comdlg32.lib",
      ]
    }
     
    # linux
    # install: sudo apt install libgtk-3-dev
    # see-configs: pkg-config --cflags --libs gtk+-3.0
    if (is_linux) {
      cflags = [
        "-pthread",
      ]
          
      include_dirs += [
        "/usr/include/gtk-3.0",
        "/usr/include/at-spi2-atk/2.0",
        "/usr/include/at-spi-2.0",
        "/usr/include/dbus-1.0",
        "/usr/lib/x86_64-linux-gnu/dbus-1.0/include",
        "/usr/include/gtk-3.0",
        "/usr/include/gio-unix-2.0",
        "/usr/include/cairo",
        "/usr/include/pango-1.0",
        "/usr/include/fribidi",
        "/usr/include/harfbuzz",
        "/usr/include/atk-1.0",
        "/usr/include/cairo",
        "/usr/include/pixman-1",
        "/usr/include/uuid",
        "/usr/include/freetype2",
        "/usr/include/libpng16",
        "/usr/include/gdk-pixbuf-2.0",
        "/usr/include/libmount",
        "/usr/include/blkid",
        "/usr/include/glib-2.0",
        "/usr/lib/x86_64-linux-gnu/glib-2.0/include",
      ]
      
      libs = [
        "gtk-3",
        "gdk-3",
        "pangocairo-1.0",
        "pango-1.0",
        "harfbuzz",
        "atk-1.0",
        "cairo-gobject",
        "cairo",
        "gdk_pixbuf-2.0",
        "gio-2.0",
        "gobject-2.0",
        "glib-2.0",
      ]
    }    

    configs += [ "../../../:skia_private" ]
    if (skia_enable_tools) {
      configs += [ "../../../:our_vulkan_headers" ]
    }
  }
}
